--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -6,29 +6,30 @@ publish_to: none
 version: 1.0.0+1
 
 environment:
-  sdk: 3.4.3
+  sdk: ">=3.8.1 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: 6.1.2
-  badges: 3.1.2
-  intl: ^0.19.0
-  http: 1.1.0
-  shared_preferences: ^2.2.3
-  cloud_firestore: ^5.0.0
-  firebase_database: ^11.0.0
-  firebase_core: ^3.0.0
+  provider: ^6.1.5+1
+  badges: ^3.1.2
+  intl: ^0.20.2
+  http: ^1.5.0
+  shared_preferences: ^2.5.3
+  cloud_firestore: ^6.0.0
+  firebase_database: ^12.0.0
+  firebase_core: ^4.0.0
 
   cupertino_icons: ^1.0.2
 
-  file_picker: ^6.1.1
-  video_player: ^2.7.0
-  fl_chart: ^0.64.0
+  file_picker: ^10.3.1
+  video_player: ^2.10.0
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
